# mwc-pedprog-unit01-lab02

./: .gitignore  README.md  friend_functions.py  globalize_weather.sh  list_or_dict.md  people.py  pyproject.toml  test_friend_functions.py
weather/: weather.py  weather_apis.py  weather_cli.py
